added probe configuration
